--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
                     class="field-email"
                     type="email"
                     name="email"
-                    placeholder="E-mail"
+                    placeholder="E-mail" required
                   />
                 </label>
                 <button class="button subscribe" type="submit">
@@ -597,7 +597,7 @@
           </svg>
         </button>
         <p class="form-caption">
-          Leave your contacts and we will call you back.
+          Leave your contacts and we will call you back
         </p>
         <form name="contact-form">
           <label class="contact-field">
@@ -610,14 +610,14 @@
           <label class="contact-field">
             <span class="contact-label">Phone</span>
             <input class="contact-input" type="tel" name="user-phone" required />
-            <svg class="contact-icon" width="18" height="18">
+            <svg class="contact-icon" width="18" height="24">
             <use href="./images/icons.svg#icon-phone"></use>
           </svg>
           </label>
           <label class="contact-field">
             <span class="contact-label">Email</span>
             <input class="contact-input" type="email" name="user-email" required />
-            <svg class="contact-icon" width="18" height="18">
+            <svg class="contact-icon" width="18" height="24">
             <use href="./images/icons.svg#icon-mail"></use>
           </svg>
           </label>
@@ -632,9 +632,9 @@
           </label>
           <label class="contact-terms">            
             <input class="contact-checkbox visually-hidden" type="checkbox"
-              name="user-terms" checked ></input>
+              name="user-terms" checked required></input>
             <svg class="check-icon" width="16" height="16">
-            <use href="./images/icons.svg#icon-check"></use></svg
+            <use href="./images/icons.svg#icon-check"></use></svg>
             <span>I accept the terms and conditions of the <a class="" href="">Privacy Policy</a></span>
           </label>
           <button class="button contact" type="submit" data-modal-open>
